--- a/a2c.html
+++ b/a2c.html
@@ -31,7 +31,7 @@
               </div>
             </div>
           </div>
-          <div class="graph"></div>
+          <div class="graph" id="graph"></div>
         </div>
       </section>
   </div>
